force-app/main/default/objects/KPI_Goal__c/KPI_Goal__c.object-meta.xml
<CustomObject>
    <label>KPI Goal</label>
    <nameField>
        <label>KPI Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Goal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>