force-app/main/default/objects/KPI_Goal__c/fields/Email_Goal__c.field-meta.xml
<CustomField>
    <fullName>Email_Goal__c</fullName>
    <label>Email Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>