force-app/main/default/objects/KPI_Goal__c/fields/Event_Goal__c.field-meta.xml
<CustomField>
    <fullName>Event_Goal__c</fullName>
    <label>Event Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>