force-app/main/default/objects/KPI_Goal__c/fields/Task_Goal__c.field-meta.xml
<CustomField>
    <fullName>Task_Goal__c</fullName>
    <label>Task Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>